<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_tohoku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_tohoku"
        android:textSize="20sp"
        android:onClick="button_tohoku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_kanto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_kanto"
        android:textSize="20sp"
        android:onClick="button_kanto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_tyubu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_tyubu"
        android:textSize="20sp"
        android:onClick="button_tyubu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_kinki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_kinki"
        android:textSize="20sp"
        android:onClick="button_kinki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_tyugoku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_tyugoku"
        android:text="@string/area_tyugoku"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_shikoku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_shikoku"
        android:text="@string/area_shikoku"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_kyusyu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_kyusyu"
        android:text="@string/area_kyusyu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>
